# third_party

./: readme  readme.md
c-ares/android/: build_arm.sh  build_arm64-v8a.sh  build_armv7.sh
c-ares/linux/: build.sh
curl/: version.md
curl/android/: build_arm.sh  build_arm64-v8a.sh  build_armv7.sh
curl/linux/: build.sh
ffmpeg/android/: build_android_arm.sh  build_android_arm64-v8a.sh  build_android_arm_v7a_neon.sh
ffmpeg/linux/: build.sh
jrtp/: version.md
jrtp/android/: jrtplib_build_arm.sh  jrtplib_build_arm64-v8a.sh  jrtplib_build_armv7.sh  jthread_build_arm.sh  jthread_build_arm64-v8a.sh  jthread_build_armv7.sh
jrtp/linux/: jrtplib_build.sh  jthread_build.sh
jsoncpp/android/: build_arm.sh  build_arm64-v8a.sh  build_armv7.sh
jsoncpp/linux/: build.sh
libevent/: version.md
libevent/android/: android-build-arm64-v8a.sh  android-build-armv7a.sh  android-build.sh
libevent/linux/: build.sh
lua/: version.md
lua/linux/: Makefile  build.sh
onvif/src/linux/: CMakeLists.txt  build.sh
openssl/: version.md
openssl-cli/: readme.md
openssl/android/: Setenv-android-arm.sh  Setenv-android-arm64-v8a.sh  arm can not compile.txt  build-so.sh  build_arm.sh  build_arm64.sh  build_armv7.sh
openssl/linux/: build.sh
osip/: version.md
osip/android/: ex-android-build-arm.sh  ex-android-build-arm64-v8a.sh  ex-android-build-armv7.sh  o-android-build-arm.sh  o-android-build-arm64-v8a.sh  o-android-build-armv7.sh
osip/linux/: libexosip2_build.sh  libosip2_build.sh
pjproject/: version.md
protobuf/: version.md
speex/linux/: build.sh
x264/: version.md
(+24 files in other folders)
